powered by added

--- a/front-page.html
+++ b/front-page.html
@@ -82,7 +82,10 @@ weight: 10
   <a href="http://www.colorado.edu/" target="_new">University of Colorado Boulder</a>
   <br/>
   <span class="small">
-    &copy; Copyright 2015 <a href="mailto:{{ site.email }}">{{ site.owner }}</a>
+    &copy; Copyright 2015 <a href="mailto:{{ site.email }}">{{ site.owner }}</a><br/>
+    Powered by <a href="https://jekyllrb.com/" target="_new">Jekyll</a> and
+    <a href="http://github.com" target="_new">GitHub</a>,
+    styled with <a href="http://getbootstrap.com/" target="_new">Bootstrap</a>
   </span>
 </div>
 
