--- a/front-page.html
+++ b/front-page.html
@@ -5,7 +5,6 @@ weight: 10
 
 <div class="container">
 
-
 <div class="front-page">
 
   <table>
@@ -30,14 +29,8 @@ weight: 10
 
     </tr>
 
-    <!--<tr class="front-page-gap">
-      <td style="border-right: 2px solid white; background:rgba(0, 0, 0,.3);"></td>
-      <td></td>
-      <td></td>
-    </tr>-->
-
     <tr>
-      <td>
+      <td colspan="2">
         <div class="btn-group-vertical btn-group-lg front-page-menu" role="group">
           {% assign pages = site.pages | sort:"weight"  %}
           {% for p in pages %}
@@ -53,11 +46,11 @@ weight: 10
     </tr>
 
     <tr class="front-page-footer">
-      <td>
-        <h4 style="margin: 0px;"><a href="http://www.colorado.edu/geolsci/" target="_new">Department of Geological Sciences</a></h4>
-      </td>
-      <td align="right">
-          <h3><a href="http://www.kopflab.com">Kopf Lab</a></h3>
+      <td colspan="2">
+        <div class="row">
+          <div class="col-md-6"><h4><a href="http://www.colorado.edu/geolsci/" target="_new">Department of Geological Sciences</a></h4></div>
+          <div class="col-md-6 text-right"><h4 class="pull-right"><a href="http://www.kopflab.com">Kopf Lab</a></h4></div>
+        </div>
       </td>
     </tr>
 
@@ -74,6 +67,5 @@ weight: 10
     &copy; Copyright 2015 <a href="mailto:{{ site.email }}">{{ site.owner }}</a>.
   </span>
 </div>
-
 
 </div>
