--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 menu: News
 icon: globe
-image: yellowstone_lowres.jpg
+image: font_page/yellowstone_lowres.jpg
 align: left
 weight: 5
 ---
