--- a/people/people.html
+++ b/people/people.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 menu: People
-icon: user
+icon: fa fa-users
 status: disabled
 align: left
-weight: 3
+weight: 1
 permalink: /people/
 ---
 
