--- a/publications/publications.html
+++ b/publications/publications.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 menu: Publications
-icon: book
+icon: fa fa-institution
 image: yellowstone_lowres.jpg
 align: left
 status: disabled
-weight: 3
+weight: 4
 permalink: /publications/
 ---
 
