--- a/resources/resources.html
+++ b/resources/resources.html
@@ -1,21 +1,12 @@
 ---
 layout: default
 menu: Resources
-icon: cog
-align: left
-weight: 4
+title: Resources
+subtitle: <a href="#facilities">Facilities</a> | <a href="#labware">Labware</a> | <a href="#software">Software</a>
+icon: glyphicon glyphicon-cog
+weight: 5
 permalink: /resources/
 ---
-
-<center>
-<h1>Resources</h1>
-<h4><a href="#facilities">Facilities</a> | <a href="#labware">Labware</a> | <a href="#software">Software</a></h4>
-</center>
-
-<br/>
-<span class="page-divider"></span>
-<span class="one"></span>
-<span class="two"></span>
 
 <h2 id="facilities">Facilities</h2>
 
