front page update

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 ---
 layout: default
-menu: News
-icon: globe
-image: font_page/yellowstone_lowres.jpg
-align: left
-weight: 5
+menu: Home
+icon: fa fa-home
+title: Geobiology & Geomicrobial Physiology at CU Boulder
+images:
+  - file: /images/front_page/santa_paula_creek_oil_seep_lowres.jpg
+    title: Microbial communities<br/>near natural oil seeps
+    location: Santa Paula Creek, California
+  - file: /images/front_page/yellowstone_lowres.jpg
+    title: Carbonate terraces<br/>at Mammoth hot springs
+    location: Yellowstone National Park, Wyoming
+  - file: /images/front_page/rmnp_methane_bubbles_lowres.jpg
+    title: Methane bubbles frozen in ice
+    location: Rocky Mountain National Park, Colorado
+slideshow_speed: 4000
+map_location: 2200 Colorado Ave, Boulder, CO 80309
+map_label: Benson Earth Sciences, Colorado Avenue, Boulder, CO
+weight: 0
 ---
 
-<h1>Starting in Fall 2016</h1>
+## About the lab
+
+We study
+
+## Open Source Policy
+
+In the spirit of fostering collaboration and advancing the pace of discovery we strive to make all our lab designs and software development openly available and easily accessible to other scientists and students.
+
+
+<h1>Starting in Fall 2016 yay</h1>
 
 <div class="media">
   <div class="media-body">
@@ -21,7 +42,7 @@ weight: 5
     <p>Please note that this website is still under construction and more information will follow soon. In the meantime, please contact me at sebastian.kopf (at) colorado.edu about upcoming research opportunities at CU Boulder.</p>
 
     <br/>
-  
+
 
   </div>
 
