site titles for non image and single image pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 menu: Home
 icon: fa fa-home
 title: Geobiology & Geomicrobial Physiology at CU Boulder
-images:
+title_height: 100px
+image:
   - file: /images/front_page/santa_paula_creek_oil_seep_lowres.jpg
     title: Microbial communities<br/>near natural oil seeps
     location: Santa Paula Creek, California
@@ -13,6 +14,7 @@ images:
   - file: /images/front_page/rmnp_methane_bubbles_lowres.jpg
     title: Methane bubbles frozen in ice
     location: Rocky Mountain National Park, Colorado
+image_height: 300px
 slideshow_speed: 4000
 map_location: 2200 Colorado Ave, Boulder, CO 80309
 map_label: Benson Earth Sciences, Colorado Avenue, Boulder, CO
