--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@ image:
     title: Methane bubbles frozen in ice
     location: Rocky Mountain National Park, Colorado
 image_height: 300px
-slideshow_speed: 4000
-map_location: 2200 Colorado Ave, Boulder, CO 80309
-map_label: Benson Earth Sciences, Colorado Avenue, Boulder, CO
+image_interval: 3000
 weight: 0
+category: home
 ---
 
 ## About the lab
