menu items update

--- a/research/research.html
+++ b/research/research.html
@@ -2,13 +2,15 @@
 layout: default
 menu: Research
 icon: fa fa-area-chart
-image: yellowstone_lowres.jpg
-align: left
 weight: 2
+title: Research
+title_height: 110px
+image:
+  - file: /images/news/building_blocks2.jpg
+image_height: 110px
+category: research
 permalink: /research/
 ---
-
-<h1>Research</h1>
 
 <div class="row">
 {% for post in site.categories.research reversed %}
