--- a/resources/resources.html
+++ b/resources/resources.html
@@ -1,10 +1,15 @@
 ---
 layout: default
 menu: Resources
+icon: glyphicon glyphicon-cog
 title: Resources
 subtitle: <a href="#facilities">Facilities</a> | <a href="#labware">Labware</a> | <a href="#software">Software</a>
-icon: glyphicon glyphicon-cog
+title_height: 110px
+image:
+  - file: /images/news/building_blocks2.jpg
+image_height: 200px
 weight: 5
+category: resources
 permalink: /resources/
 ---
 
