home page updated

--- a/resources/resources.html
+++ b/resources/resources.html
@@ -13,6 +13,10 @@ category: resources
 permalink: /resources/
 ---
 
+<h5> Open Source Policy </h5>
+
+We strive to make all our lab designs and software development openly available and easily accessible to other scientists and students to advance the pace of discovery and promote collaboration.
+
 <h2 id="facilities">Facilities</h2>
 
 <div class="media">
