--- a/research/research.html
+++ b/research/research.html
@@ -4,10 +4,17 @@ menu: Research
 icon: fa fa-area-chart
 weight: 2
 title: Research
-title_height: 110px
+title_height: 80px
 image:
-  - file: /images/news/building_blocks2.jpg
-image_height: 110px
+  - file: /images/research/sfa_ned.jpg
+    title: Colorimetric assay for<br/>nitrite quantification
+  - file: /images/research/chemostat.jpg
+    title: Chemostats<br/>in operation
+  - file: /images/research/phototrophs.jpg
+    title: Anoxygenic phototroph<br/>enrichment cultures
+  - file: /images/research/cooler.jpg
+    title: Peltier cooler assembly<br/>for temperature experiments
+image_height: 200px
 category: research
 permalink: /research/
 ---
