top level images folder moved to header_images

--- a/people/people.html
+++ b/people/people.html
@@ -5,7 +5,7 @@ icon: fa fa-users
 title: The Team
 title_height: 70px
 image:
-  - file: /images/people/starfish.jpg
+  - file: /header_images/people/starfish.jpg
 image_height: 200px
 category: people
 permalink: /people/
