resources adjustment to new folder structure

--- a/resources/resources.html
+++ b/resources/resources.html
@@ -6,7 +6,7 @@ title: Resources
 subtitle: <a href="#facilities">Facilities</a> | <a href="#labware">Labware</a> | <a href="#software">Software</a>
 title_height: 110px
 image:
-  - file: /header_images/resources/building_blocks.jpg
+  - file: /resources/images/overview/building_blocks.jpg
 image_height: 200px
 weight: 5
 category: resources
@@ -25,7 +25,7 @@ We strive to make all our lab designs and software development openly available 
     The Organic Geochemistry Lab is a joint laboratory space with Prof. Julio Sepulveda and Prof. Giff Miller located in the brand-new SEEL (Sustainability, Energy, Environment Labs) building. Construction is almost finished and the space is expected to be fully operational by Fall 2016. Details on available equipment and analytical instrumentation coming soon.
   </div>
   <span class="media-right">
-    <img class="media-object" src="/header_images/resources/ogl_lab.jpg" width="200px">
+    {% include image.html img="/resources/images/overview/ogl_lab.jpg" caption="Organic Geochemistry Lab" width="200px" %}
   </span>
 </div>
 
@@ -35,7 +35,7 @@ We strive to make all our lab designs and software development openly available 
     The Geomicorobiology culturing lab will be a central resource for the Geobiology community at CU Boulder. The design phase is complete and renovations will be finished towards the end of 2016. Details on available equipment, general resources and analytical instrumentation coming soon.
   </div>
   <span class="media-right">
-    <img class="media-object" src="/header_images/resources/gmp_lab.jpg" width="200px">
+    {% include image.html img="/resources/images/overview/gmp_lab.png" width="200px" %}
   </span>
 </div>
 
@@ -50,9 +50,9 @@ We strive to make all our lab designs and software development openly available 
     submersible, battery-powered narrow-spectrum LED illumination chamber with a 3D
     printed, environmentally exposed microscope slide holder that was developed as a low-cost solution for wave-length specific in situ enrichment of phototrophic microorganisms at the 2015 MBL Microbial Diversity summer course. The method selectively enriches for microorganisms that thrive under the provided light regime(s) but within the natural chemical environment of their native habitat.
   </div>
-  <a class="media-right" href="/resources/lightbox/">
-    <img class="media-object" src="/resources/header_images/lb_green_red_ready_thumb.jpg" width="200px">
-  </a>
+  <span class="media-right">
+    {% include image.html img="/resources/images/lightbox/lb_green_red_ready.jpg" width="200px" %}
+  </span>
 </div>
 
 <h2 id="software">Software</h2>
@@ -73,9 +73,9 @@ We strive to make all our lab designs and software development openly available 
   <div class="media-body">
     This app is intended for use in estimating expected enrichments from stable isotope labeling in microbial populations. It is based on isotopic enrichment resulting from unbiased clonal growth in the presence of an isotopic label. This app is intended to make it easy to explore this space for different isotope systems and takes care of all the isotope conversions and mixing calculations between existing and isotopically labelled pools.
   </div>
-  <a class="media-right" href="http://server.kopflab.com/shiny/apps/isolabel/">
-    <img class="media-object" src="/header_images/resources/isolabel.jpg" width="200px">
-  </a>
+  <span class="media-right">
+    {% include image.html img="/resources/images/overview/isolabel.png" width="200px" %}
+  </span>
 </div>
 
 <div class="media">
@@ -85,9 +85,9 @@ We strive to make all our lab designs and software development openly available 
   <div class="media-body">
     This app is a visual tool to explore the isotope dynamics of the nitrogen cycle. Its goal is to make the different processes more accessible and help students gain a more intuitive understanding of how they change the ocean's nitrogen reservoirs. All plots can be saved as PDF and can of course be used freely, especially for educational purposes. The application is released as open software under the GNU General Public License 3.0.
   </div>
-  <a class="media-right" href="http://server.kopflab.com/shiny/apps/nitrogen_cycle_dynamics/">
-    <img class="media-object" src="/header_images/resources/n_cylce_dynamics.jpg" width="200px">
-  </a>
+  <span class="media-right">
+    {% include image.html img="/resources/images/overview/n_cylce_dynamics.png" width="200px" %}
+  </span>
 </div>
 
 <div class="media">
@@ -97,9 +97,9 @@ We strive to make all our lab designs and software development openly available 
   <div class="media-body">
     This R package is intended as an educational tool to facilitate the modeling of isotopic effects through biogeochemical pathways and cycles including non-steady state and steady-state solutions. Core functionality for the construction of reaction networks and the corresponding system of differential equations is fully implemented and can be explored for multiple isotope systems in parallel. Automatically generated reaction diagrams and symbolic representation of the system of differential equations make it easy to check system structure.
   </div>
-  <a class="media-right" href="https://github.com/sebkopf/isocyclr#isocyclr">
-    <img class="media-object" src="/header_images/resources/isocyclr_diagram.png" width="200px">
-  </a>
+  <span class="media-right">
+    {% include image.html img="/resources/images/overview/isocyclr_diagram.png" width="200px" %}
+  </span>
 </div>
 
 <br/>
