research under construction

--- a/research/research.html
+++ b/research/research.html
@@ -19,6 +19,9 @@ category: research
 permalink: /research/
 ---
 
+<h3>Under construction, stay tuned for more details...</h3>
+
+<!--
 <div class="row">
 {% for post in site.categories.research reversed %}
 	<div class="col-xs-12 col-md-4">
@@ -29,3 +32,4 @@ permalink: /research/
 	</div>
 {% endfor %}
 </div>
+-->
