update people main page

--- a/people/people.html
+++ b/people/people.html
@@ -70,7 +70,7 @@ weight: 1
 		{% endfor %}
 	</div>
 
-  <h3>Joint Geobiology Labs (Faculty & Staff)</h3>
+  <h3>Joint Geobiology Labs (Faculty & Researchers)</h3>
 
   <div class="grid">
     {% for person in site.categories.people reversed %}
