--- a/publications/publications.html
+++ b/publications/publications.html
@@ -12,5 +12,5 @@ category: publications
 permalink: /publications/
 ---
 
-<script src="http://bibbase.org/show?bib={{ site.url }}/publications/references.bib&jsonp=1"></script>
+<script src="http://bibbase.org/show?bib={{ site.urlencode }}%2Fpublications%2Freferences.bib&jsonp=1"></script>
 <script type="text/javascript">$('#slideshow').show();</script>
