--- a/publications/publications.html
+++ b/publications/publications.html
@@ -12,6 +12,5 @@ category: publications
 permalink: /publications/
 ---
 
-<!--<script src="https://bibbase.org/show?bib={{ site.urlencode }}%2Fpublications%2Freferences.bib&jsonp=1"></script>-->
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fkopflab.com%2Fpublications%2Freferences.bib&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib={{ site.urlencode }}%2Fpublications%2Freferences.bib&jsonp=1"></script>
 <script type="text/javascript">$('#slideshow').show();</script>
