--- a/resources/resources.html
+++ b/resources/resources.html
@@ -16,6 +16,7 @@ permalink: /resources/
 <h5> Open Source Policy </h5>
 
 We strive to make all our lab designs and software development openly available and easily accessible to other scientists and students to advance the pace of discovery and promote collaboration.
+For details, please see the <a href="https://github.com/KopfLab">lab's repositories on GitHub</a>.
 
 <h2 id="facilities">Facilities</h2>
 
@@ -42,6 +43,18 @@ We strive to make all our lab designs and software development openly available 
 <h2 id="labware">Labware</h2>
 
 <div class="media">
+  <h4 class="media-heading">Tube Tower
+    <a href="/resources/tubetower/" class="glyphicon glyphicon-link"></a>
+  </h4>
+  <div class="media-body">
+    The Tube Tower is a flexible 3D printer layout for small foot print vertical incubation of anaerobic (i.e. stoppered & crimp-sealed) balch culture tubes.
+  </div>
+  <span class="media-right">
+
+  </span>
+</div>
+
+<div class="media">
   <h4 class="media-heading">MBL Lightbox
     <a href="/resources/lightbox/" class="glyphicon glyphicon-link"></a>
   </h4>
@@ -58,11 +71,38 @@ We strive to make all our lab designs and software development openly available 
 <h2 id="software">Software</h2>
 
 <div class="media">
+  <h4 class="media-heading">Isoreader R package
+    <a href="https://isoreader.kopflab.org" class="glyphicon glyphicon-link"></a>
+  </h4>
+  <div class="media-body">
+    This package is intended as a unified one-stop command line interface to all common IRMS (isotope ratio mass spectrometry) file formats used in stable isotope geochemistry. It enables the reading and processing of stable isotope data directly from the data files and thus provides a tool for platform-independent (Windows, Mac, Linux), efficient and reproducible data reduction.
+  </div>
+</div>
+
+<div class="media">
+  <h4 class="media-heading">Isoviewer R package
+    <a href="https://isoviewer.kopflab.org" class="glyphicon glyphicon-link"></a>
+  </h4>
+  <div class="media-body">
+    The isoviewer graphical user interface (GUI) provided by this package is based on the functionlity implemented by the isoreader package. The purpose of the GUI is two fold. First and foremost, it is a learning tool to illustrate how to build literate RMarkdown data processing files for IRMS data using the underlying isoreader package as a unified interface for reading, converting and quickly visualizing various raw IRMS data file formats. The second purpose is to provide an example for a web-based IRMS data repository that is easy to run on any computer/server completely platform-independent and open-source. A live demo is <a href="/isoviewer_demo/">available here</a>.
+  </div>
+</div>
+
+<div class="media">
   <h4 class="media-heading">Isotopia R package
-    <a href="https://github.com/sebkopf/isotopia#isotopia" class="glyphicon glyphicon-link"></a>
+    <a href="http://isotopia.kopflab.org/" class="glyphicon glyphicon-link"></a>
   </h4>
   <div class="media-body">
     In stable isotope geochemical calculations, we use a number of different representations of isotopic information and processes (ratios, abundances, delta values, alpha values, epsilon values, fractionation factors, refereence frame shifts, mass balance calculations, mass-independent effects, etc., etc.) that are constantly being converted back and forth and used for different kinds of isotope arithmetic. Very frequently, the tangle of keeping track of this information and how all the calculations are done properly makes code very hard to read, difficult to communicate - or even understand oneself later on, and as anyone knows who's ever dropped a -1 or x1000 at the wrong place, prone to small mistakes that can make a huge difference. Isotopia is an R package that uses the S4 object system of R to define elemental isotopic data classes so that it can automatically keep track of what is a ratio, what is a delta value (and is it in permil notation or in ppm), etc., and perform isotope arithmetic accordingly.
+  </div>
+</div>
+
+<div class="media">
+  <h4 class="media-heading">Media Chem Tools R package
+    <a href="https://mediatools.kopflab.org" class="glyphicon glyphicon-link"></a>
+  </h4>
+  <div class="media-body">
+    The mediatools package is a collection of tools to simplify working with the chemical composition and speciation of defined culture media for microbial physiology and environmental microbiology research. It includes a wide range of general purpose functionality for chemical applications including built-in, data-frame-compatible chemical quantities (volume, mass, molarity, temperature, pressure, etc.) that automatically keep track of their units and metric scaling, as well as more specialized tools for the assembly and comparison of culturing media recipes, pH buffering strategies and aqueous speciation.
   </div>
 </div>
 
